--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ dependencies:
   flutter_bloc: ^8.0.1
   equatable: ^2.0.3
   dartz: ^0.10.1
-  connectivity_plus: ^2.2.1
+  data_connection_checker_tv: ^0.3.5-nullsafety
   http: ^0.13.4
   shared_preferences: ^2.0.13
 
