--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^1.0.0
   mocktail: ^0.3.0
+  bloc_test: ^9.0.3
 
 flutter:
   uses-material-design: true
